--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
                     </div>
                 </div>
             </div>
+            <div id="hinh">
+                <div id="hinh-left">
+                    <img src="image/Image 1705.png" alt="">
+                </div>
+                <div>
+                    <div id="hinh-right-top">
+                        <div> <img src="image/Image 1708.png" alt=""></div>
+                       <div> <img  style="margin-left: 10px;"src="image/Image 1707.png" alt=""></div>
+                    </div>
+                    <div id="hinh-right-bot">
+                        <div> <img src="image/Image 1706.png" alt=""></div>
+                       <div> <img style="margin-left: 10px;" src="image/Image 1709.png" alt=""></div>
+                    </div>
+                </div>
+               
+            </div>
         </div>
     </div>
 </body>
